# daemon_server

./: .clang_complete  .gitignore  CMakeLists.txt  README.md
include/logger/: log.hpp
include/server/: logger.hpp  server.hpp  signalhelper.hpp  worker.hpp
src/client/: .client.cpp.swp  client.cpp
src/server/: daemon.cpp  logger.cpp  main.cpp  server.cpp
